[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[project]
name = "arlo-camera-streamer"
dynamic = ["version","dependencies"]
description = "Continuous streaming for Arlo cameras"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Michael Lopez", email = "mickael.lopez@gmail.com" },
]
keywords = [
  "automation",
  "formatter",
  "pyfmt",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.setuptools]
py-modules = []
packages = []

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
pythonpath = ["./", "tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.pylint.MASTER]
ignore-paths = '^tests/.*$'
max-line-length=130

[tool.pyright]
exclude = ["**/node_modules",
    "**/__pycache__",
    "**/tests"
]